# cart_api/api.py
@@ -3,6 +3,7 @@ from swagger_ui import falcon_api_doc
 from cart_api.routes.heartbeat import Heartbeat
 from cart_api.routes.products import Product, Products
 from cart_api.routes.cartitems import CartItem, CartItems
+from cart_api.routes.sellitems import SellItem, SellItems
 
 
 # Instantiate RESTful API and resources
@@ -13,6 +14,8 @@ product = Product()
 products = Products()
 cart_item = CartItem()
 cart_items = CartItems()
+sell_item = SellItem()
+sell_items = SellItems()
 
 # Define our API's routes
 api.add_route("/heartbeat", hb)
@@ -20,6 +23,8 @@ api.add_route("/v1/products/{product_id:int}", product)
 api.add_route("/v1/products", products)
 api.add_route("/v1/cartitems", cart_items)
 api.add_route("/v1/cartitems/{cart_item_id:int}", cart_item)
+api.add_route("/v1/sellitems", sell_items)
+api.add_route("/v1/sellitems/{sell_item_id:int}", sell_item)
 
 # Add a route which serves our OpenAPI specification
 falcon_api_doc(
